syntax = 'proto3';

package organization;

option go_package = "leadIt.organization.v1;organizationv1";
import "google/api/annotations.proto";


service Organization {
  rpc addOrganization (addOrganizationRequest) returns (addOrganizationResponse) {
    option(google.api.http) = {
      post: "/v1/organization/add"
      body: "*"
    };
  }
  rpc getOrganization(getOrganizationRequest) returns (getOrganizationResponse) {
    option(google.api.http) = {
      post: "/v1/organization/get"
      body: "*"
    };
  }

  rpc getOrganizations(getOrganizationsRequest) returns (getOrganizationsResponse) {
    option(google.api.http) = {
      post: "/v1/organization/get-many"
      body: "*"
    };
  }

  rpc updateOrganization(updateOrganizationRequest) returns (updateOrganizationResponse) {
    option(google.api.http) = {
      post: "/v1/organization/update"
      body: "*"
    };
  }

  rpc deleteOrganization(deleteOrganizationRequest) returns (deleteOrganizationResponse) {
    option(google.api.http) = {
      post: "/v1/organization/delete"
      body: "*"
    };
  }
}
message OrganizationType {
  int64 id = 1;
  string name = 2;
  string organizer_id = 3;
  string description = 4;
  string organization_image = 5;
}

message addOrganizationRequest {
  string name = 1;
  string description = 2;
  string image = 3;
}

message addOrganizationResponse {
  int64 id = 1;
}

message getOrganizationRequest {
  int64 id = 1;
}

message getOrganizationResponse {
  OrganizationType organization = 1;
}

message getOrganizationsRequest {
}

message getOrganizationsResponse {
  repeated OrganizationType organizations = 1;
}

message updateOrganizationRequest {
  OrganizationType organization = 1;
}

message updateOrganizationResponse {
  OrganizationType organization = 1;
}

message deleteOrganizationRequest {
  int64 id = 1;
}

message deleteOrganizationResponse {
  int64 id = 1;
}